<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:TagsEditText="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="events_Details"
            type="com.us.clique.bottomNavigation.fragments.module.BottomNavigationViewModel" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.EventsAroundYouDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/rl_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_onBackPress"
                android:layout_width="@dimen/dimen_30"
                android:layout_height="@dimen/dimen_30"
                android:src="@drawable/backpress"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tt_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events_around_you"
                android:fontFamily="@font/poppins_medium"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_10"
                android:textSize="@dimen/font_18"
                android:textColor="@color/events_color"
                android:layout_centerVertical="true"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/rl_reltive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20"
        android:layout_marginRight="@dimen/dimen_20"
        android:background="@color/seekbar_bg_tint"
        android:layout_below="@id/toolbar" >

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dimen_20">

            <RelativeLayout
                android:id="@+id/rl_event"
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <ImageView
                    android:id="@+id/iv_event"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />

                <RelativeLayout
                    android:id="@+id/rl_3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:id="@+id/tv_moveTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dimen_20"
                        android:fontFamily="@font/manrope_bold"
                        android:text="@string/movie_title"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_20" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_moveTitle"
                        android:layout_marginLeft="@dimen/dimen_20"
                        android:drawableLeft="@drawable/ic_timeicon"
                        android:padding="@dimen/dimen_5"
                        android:text=" 08:30 PM, Fri 22 Aug"
                        android:textColor="@color/time_text"
                        android:textSize="@dimen/font_12" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_moveTitle"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="@dimen/dimen_20"
                        android:layout_marginRight="@dimen/dimen_10"
                        android:drawableLeft="@drawable/ic_location"
                        android:padding="@dimen/dimen_5"
                        android:text=" NYC,Centrl Theater"
                        android:textColor="@color/time_text"
                        android:textSize="@dimen/font_12" />


                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cd_cardview"
            android:layout_marginTop="@dimen/dimen_15"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/dimen_5"
            android:text="@string/event_content"
            android:textColor="@color/nyc" />
    </RelativeLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_cloneExperince"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="15dp"
        android:gravity="center"
        android:fontFamily="@font/manrope_bold"
        android:textColor="@color/white"
        android:layout_below="@id/rl_reltive"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:textAllCaps="false"
        android:text="Clone Experience"
        android:background="@drawable/button_background"/>

</RelativeLayout>
</ScrollView>
</layout>